Добавил алгоритм взаимодействия компонентов инфраструктуры

--- a/inc/4-description.tex
+++ b/inc/4-description.tex
@@ -45,68 +45,115 @@ Munin работает по протоколу MGF (Munin Graphing Framework) н
 
 На основе обзора литературы, проведенного в пункте \ref{literature}, выбраны и внедрены технологии виртуализации OpenVZ и KVM.
 
-\subsection{Алгоритм функционирования инфраструктуры}
+\subsection{Алгоритмы функционирования инфраструктуры}
 
-\subsubsection{Алгоритм взаимодействия пользователя с инфраструктурой}
+\subsubsection{Схема взаимодействия пользователя с инфраструктурой}
 
 Взаимодействие пользователя с инфраструктурой происходит по следующим сценариям.
 
 Сценарий 1. Заказ облачного сервиса:
 \begin{enumerate}
-  \item Пользователь обращается к инфраструктуре через веб-интерфейс с целью заказа услуги;
-  \item Биллинг регистрирует нового пользователя;
-  \item Заключается договор на предоставление услуги с указанием реквизитов пользователя;
-  \item Подсистема управления услугами производит выделение физического либо виртуального сервера (контейнера, виртуальной машины), либо иной услуги с требуемыми характеристиками;
-  \item Переход к сценарию 2.
+  \item пользователь обращается к инфраструктуре через веб-интерфейс с целью заказа услуги;
+  \item биллинг регистрирует нового пользователя;
+  \item заключается договор на предоставление услуги с указанием реквизитов пользователя;
+  \item подсистема управления услугами производит выделение физического либо виртуального сервера (контейнера, виртуальной машины), либо иной услуги с требуемыми характеристиками;
+  \item переход к сценарию 2.
 \end{enumerate}
 
 Сценарий 2. Использование сервиса:
 \begin{enumerate}
-  \item Клиент пользуется предоставленным сервисом некоторый период времени, используя веб-интерфейс (VNC, SSH);
-  \item Биллинг выставляет счет пользователю за оказанные услуги;
-  \item Пользователь оплачивает сервис;
-  \item Переход к пункту а, пока не наступит событие, соответствующее сценариям 3, 4, 5, 6 или 7.
+  \item клиент пользуется предоставленным сервисом некоторый период времени, используя веб-интерфейс (VNC, SSH);
+  \item биллинг выставляет счет пользователю за оказанные услуги;
+  \item пользователь оплачивает сервис;
+  \item переход к пункту а, пока не наступит событие, соответствующее сценариям 3, 4, 5, 6 или 7.
 \end{enumerate}
 
 Сценарий 3. Изменение условий предоставления сервиса:
 \begin{enumerate}
-  \item Пользователь желает изменить условия предоставления сервиса, либо отказаться от него;
-  \item Биллинг регистрирует запрос;
-  \item Подсистема управления услугами производит изменение условий предоставления сервиса или удаляет его;
-  \item Переход к сценарию 2, в случае продолжения оказания сервиса, иначе к сценарию 5.
+  \item пользователь желает изменить условия предоставления сервиса, либо отказаться от него;
+  \item биллинг регистрирует запрос;
+  \item подсистема управления услугами производит изменение условий предоставления сервиса или удаляет его;
+  \item переход к сценарию 2, в случае продолжения оказания сервиса, иначе к сценарию 5.
 \end{enumerate}
 
 Сценарий 4. Окончание срока действия договора:
 \begin{enumerate}
-  \item У пользователя окончился срок действия договора;
-  \item Биллинг блокирует услуги;
-  \item Если пользователь желает продлить срок действия договора, переход к сценарию 6, иначе к сценарию 5.
+  \item у пользователя окончился срок действия договора;
+  \item биллинг блокирует услуги;
+  \item если пользователь желает продлить срок действия договора, переход к сценарию 6, иначе к сценарию 5.
 \end{enumerate}
 
 Сценарий 5. Окончание использования облачной услуги:
 \begin{enumerate}
-  \item Пользователь желает завершить использование сервиса;
-  \item Биллинг регистрирует отмену использования сервиса;
-  \item Подсистема управления услугами удаляет пользовательскую услугу (выделенный сервер, контейнер, виртуальная машина) из списка используемых.
+  \item пользователь желает завершить использование сервиса;
+  \item биллинг регистрирует отмену использования сервиса;
+  \item подсистема управления услугами удаляет пользовательскую услугу (выделенный сервер, контейнер, виртуальная машина) из списка используемых.
 \end{enumerate}
 
 Сценарий 6. Продление договора:
 \begin{enumerate}
-  \item Пользователь обращается к инфраструктуре через веб-интерфейс с целью продления срока действия договора;
-  \item Биллинг регистрирует факт заключения нового договора;
-  \item Переход к сценарию 2.
+  \item пользователь обращается к инфраструктуре через веб-интерфейс с целью продления срока действия договора;
+  \item биллинг регистрирует факт заключения нового договора;
+  \item переход к сценарию 2.
 \end{enumerate}
 
 Сценарий 7. Возникновение проблем в работе услуги:
 \begin{enumerate}
-  \item Пользователь обращается к биллингу через веб-интерфейс с целью предоставления заявки на устранение проблемы и информации о возникшей проблеме;
-  \item Биллинг регистрирует запрос и направляет его технической поддержке;
-  \item Техническая поддержка первого уровня устраняет проблему, если нет, то заявка передается в отдел системного администрирования;
-  \item Переход к сценарию 2.
+  \item пользователь обращается к биллингу через веб-интерфейс с целью предоставления заявки на устранение проблемы и информации о возникшей проблеме;
+  \item биллинг регистрирует запрос и направляет его технической поддержке;
+  \item техническая поддержка первого уровня устраняет проблему, если нет, то заявка передается в отдел системного администрирования;
+  \item переход к сценарию 2.
 \end{enumerate}
 
 \subsubsection{Алгоритм взаимодействия компонентов инфраструктуры}
 
-\underline{\texttt{\textit{\textbf{Накидать сценарии + эти два алгоритма на чертежи}}}}
+Сценарий 1. Мониторинг:
+\begin{enumerate}
+  \item Nagios мониторит состояние сервисов физических серверов, контейнеров и виртуальных машин;
+  \item Nagios обнаружил недоступность или сбой сервиса;
+  \item отправка электронного и SMS-сообщения дежурному администратору;
+  \item дежурный администратор исправляет проблему;
+  \item переход к пункту а.
+\end{enumerate}
+
+Сценарий 2. Резервное копирование:
+\begin{enumerate}
+  \item запуск задания инкрементального резервного копирования, согласно расписанию;
+  \item расчет свободного дискового пространства на удаленном хранилище для инкрементальной или полной копии;
+  \item в случае нехватки дискового пространства на удаленном хранилище --- отправка электронного сообщения системному администратору, переход к пункту е;
+  \item архивация и сжатие данных;
+  \item передача данных по сети;
+  \item конец резервного копирования.
+\end{enumerate}
+
+Сценарий 3. Распределение IP-адресов:
+\begin{enumerate}
+  \item добавлен новый физический сервер, контейнер, виртуальная машина или клиент хостинга заказал дополнительный адрес;
+  \item проверка свободного IP-адреса;
+  \item если свободного адреса нет, то уведомление о необходимости заказа новой подсети IP-адресов у провайдера, переход к пункту е;
+  \item привязка нового IP-адреса к физическому серверу, контейнеру, виртуальной машине или пользователю хостинга;
+  \item удаление привязанного адреса из списка свободных;
+  \item конец.
+\end{enumerate}
+
+Сценарий 4. Добавление нового физического сервера, контейнера или виртуальной машины:
+\begin{enumerate}
+  \item заказ услуги физического сервера, контейнера или виртуальной машины;
+  \item выделение IP-адресов;
+  \item подключение к системе мониторинга;
+  \item трансфер или создание зоны на главном DNS-сервере;
+  \item подключение к системе резервного копирования;
+  \item конец.
+\end{enumerate}
+
+Сценарий 5. Добавление нового домена:
+\begin{enumerate}
+  \item трансфер или создание зоны на главном DNS-сервере;
+  \item проверка доступности подчиненных DNS-серверов;
+  \item репликация зоны на подчиненные сервера;
+  \item ожидание обновления зон провайдера;
+  \item проверка работоспособности DNS;
+  \item конец.
+\end{enumerate}
 
 \clearpage
