Добавил чертежи формата А1, сделал ссылки на них в ПЗ

--- a/inc/4-description.tex
+++ b/inc/4-description.tex
@@ -2,7 +2,7 @@
 
 \subsection{Общая схема инфраструктуры}
 
-Общая схема инфраструктуры представлена на рисунке \ref{infrast-scheme}.
+Общая схема инфраструктуры представлена на рисунке \ref{infrast-scheme} и чертеже \href{extra/drafts/SevGU_09.03.01.15.A1.pdf}{СевГУ 09.03.01.15.А1}.
 \addimghere{infrast-scheme}{1}{Общая схема инфраструктуры}{infrast-scheme}
 
 В дата-центре 1 располагается основная часть инфраструктуры: сервера shared-хостинга, виртуализации OpenVZ и KVM, сервер резервного копирования и выделенные сервера клиентов.
@@ -105,6 +105,8 @@ Munin работает по протоколу MGF (Munin Graphing Framework) н
   \item переход к сценарию 2.
 \end{enumerate}
 
+Алгоритмы взаимодействия пользователем с инфраструктурой представлены на чертеже \href{extra/drafts/SevGU_09.03.01.15.A2.pdf}{СевГУ 09.03.01.15.А2}.
+
 \subsubsection{Алгоритм взаимодействия компонентов инфраструктуры}
 
 Сценарий 1. Мониторинг:
@@ -155,5 +157,7 @@ Munin работает по протоколу MGF (Munin Graphing Framework) н
   \item проверка работоспособности DNS;
   \item конец.
 \end{enumerate}
+
+Алгоритм взаимодействия компонентов инфраструктуры представлен на чертеже \href{extra/drafts/SevGU_09.03.01.15.A3.pdf}{СевГУ 09.03.01.15.А3}.
 
 \clearpage
