--- a/inc/preamble.tex
+++ b/inc/preamble.tex
@@ -34,7 +34,7 @@
 
 % Пути к каталогам с изображениями
 \usepackage{graphicx} % Вставка картинок и дополнений
-\graphicspath{{images/}{images/userguide/}{images/testing/}{images/infrastructure/}{extra/}}
+\graphicspath{{images/}{images/userguide/}{images/testing/}{images/infrastructure/}{extra/}{extra/drafts/}}
 
 % Формат подрисуночных записей
 \usepackage{chngcntr}
@@ -44,7 +44,7 @@
 \usepackage{hyperref}
 \hypersetup{
     colorlinks, urlcolor={black}, % Все ссылки черного цвета, кликабельные
-    linkcolor={black}, citecolor={black},
+    linkcolor={black}, citecolor={black}, filecolor={black},
     pdfauthor={Амет Умеров},
     pdftitle={Разработка виртуальной инфраструктуры для реализации облачных услуг}
 }
