Поправил ошибки. Спасибо Сергею Сивкову

--- a/inc/0-intro.tex
+++ b/inc/0-intro.tex
@@ -8,7 +8,7 @@
 Небольшая команда из специалистов и бизнес-пользователей может создать обоснованный план и организовать свою работу в инфраструктуре.
 Данная выделенная группа может намного эффективнее построить и управлять нестандартной облачной инфраструктурой, чем если компании будут просто продолжать добавлять дополнительные сервера и сервисы для поддержки центра обработки данных (ЦОД).
 
-IaaS (Infrastructure as a Service) --- это предоставление пользователю компьютерной и сетевой инфраструктуры и их обслуживание как услуги в форме виртуализации, то есть виртуальной инфраструктуры.
+IaaS (Infrastructure as a Service) --- это предоставление пользователю компьютерной и сетевой инфраструктуры, их обслуживание как услуги в форме виртуализации, то есть виртуальной инфраструктуры.
 Другими словами, на базе физической инфраструктуры дата-центров (ДЦ) провайдер создает виртуальную инфраструктуру, которую предоставляет пользователям как сервис.
 Стоит отметить, что IaaS не предполагает передачи в аренду программного обеспечения, а всего лишь предоставляет доступ к вычислительным мощностям.
 
