--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -8,7 +8,7 @@
 Первой моделью информационной системы была монолитная архитектура.
 В данной модели на одном компьютере работали и приложения и база данных (БД), а пользователи сидели у <<тонких>> терминалов которые отображали информацию с компьютера.
 У архитектуры было большое количество недостатков, поэтому впоследствии ее сменила более перспективная клиент-серверная архитектура.
-В этом случае на компьютере располагался выделенный сервер баз данных, а пользователи с <<толстых клиентов>> в разгружали сервер БД.
+В этом случае на компьютере располагался выделенный сервер баз данных, а пользователи с <<толстых клиентов>> разгружали сервер БД.
 Затем появилась еще более современная многоуровневая архитектура, у которой логика приложений вынесена на отдельный компьютер, который называется сервер приложений, а пользователи работали на <<тонких>> клиентах через веб-браузеры.
 В современном информационном мире большинство приложений выполнено именно в многоуровневой архитектуре.
 Она подразумевает развертывание всей ИТ-инфраструктуры на территории заказчика \cite{oracle-db}.
@@ -18,7 +18,7 @@
 Процесс уже идет полным ходом и его игнорирование или недооценка может привести к поражению в конкурентной борьбе на рынке.
 В данном случае имеется в виду не только отставание ИТ или неоправданные затраты на него, но и отставание в развитии бизнеса компании, которая зависит от гибкости информационной инфраструктуры и скорости вывода новых сервисов и продуктов на рынок.
 
-В феврале 2011 года ИТ-директор американского правительства Вивек Кундра опубликовал стратегию стратегию переноса части информационных систем в облако.
+В феврале 2011 года ИТ-директор американского правительства Вивек Кундра опубликовал стратегию переноса части информационных систем в облако.
 Стратегия была опубликована в документе под названием <<Federal Cloud Computing Strategy>>, который четко описывает порядок и сроки переноса.
 Целью работ является уменьшение сложности и повышение управляемости ИТ, увеличение нагрузки оборудования до 70-80\%, а также уменьшение количества центров обработки данных.
 
