--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -38,7 +38,7 @@
 Принцип ориентирован на декомпозицию с сохранением целостных представлений о системе.
 Система должна рассматриваться и как целое, и как совокупность элементов.
 Расчленение системы необходимо производить, сохраняя целостное представление о системе.
-Принцип подразумевает выделение подсистем, композиция которых в совокупности со связями позволяет выполнять все функции проектируемой системы, определяет ее структуру и может быть рассмотрена как единая, целостная система
+Принцип подразумевает выделение подсистем, композиция которых в совокупности со связями позволяет выполнять все функции проектируемой системы, определяет ее структуру и может быть рассмотрена как единая, целостная система.
 
 На основании функций проектируемой системы, представленных выше, в ней можно выделить следующие подсистемы:
 \begin{enumerate}
