--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -17,7 +17,7 @@
     (дата обращения: 14.04.2015)
 
 \bibitem{ibm-virt}
-    М. Тим Джонс
+    Джонс Т.М.
     Виртуальный Linux. Обзор методов виртуализации, архитектур и реализаций
     [Электронный ресурс] //
     IBM developerWorks Россия: Ресурс IBM для разработчиков и IT профессионалов
@@ -33,7 +33,7 @@
     (дата обращения: 15.04.2015)
 
 \bibitem{qemu-ibm}
-    М. Тим Джонс
+    Джонс Т.М.
     Эмуляция систем с помощью QEMU
     [Электронный ресурс] //
     IBM developerWorks Россия: Ресурс IBM для разработчиков и IT профессионалов
@@ -41,7 +41,7 @@
     (дата обращения: 16.04.2015)
 
 \bibitem{kvm-ibm}
-    Бхану П. Толети
+    Толети Б.П.
     Гипервизоры, виртуализация и облако: Анализ гипервизора KVM
     [Электронный ресурс] //
     IBM developerWorks Россия: Ресурс IBM для разработчиков и IT профессионалов
@@ -49,7 +49,7 @@
     (дата обращения: 16.04.2015)
 
 \bibitem{xen-xguru}
-    Чубин Игорь
+    Чубин И.
     Руководство пользователя Xen v3.0
     [Электронный ресурс] //
     Xgu.ru
@@ -57,7 +57,7 @@
     (дата обращения: 18.04.2015)
 
 \bibitem{lxc-openvz}
-    Одинцов Павел
+    Одинцов П.
     Контейнеризация на Linux в деталях -- LXC и OpenVZ Часть 2
     [Электронный ресурс] //
     Хабрахабр
@@ -85,7 +85,7 @@
     Изд-во СевНТУ, 2005. -- 32с.
 
 \bibitem{unix-handbook}
-    Немет Эви, Снайдер Гарт, Хейн Трент, Уэйли Бэн.
+    Немет Э., Снайдер Г., Хейн Т., Уэйли Б.
     Unix и Linux: руководство системного администратора,
     4-е изд.: Пер. с англ. -- М.: ООО <<И.Д. Вильямс>>, 2012. --
     1312 с.: ил.
