Поправки от нормоконтроллера

--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -48,10 +48,10 @@
   \item подсистема защиты и обеспечения целостности данных.
 \end{enumerate}
 
-На рисунке \ref{subsystems} представлена схема взаимодействия между подсистемами.
-\addimghere{subsys}{0.8}{Взаимодействие между подсистемами и их связь с окружающей средой}{subsystems}
+На рис. \ref{subsystems} представлена схема взаимодействия между подсистемами.
+\addimg{subsys}{0.8}{Взаимодействие между подсистемами и их связь с окружающей средой}{subsystems}
 
-Обозначения, приведенные на рисунке \ref{subsystems} требуют пояснения:
+Обозначения, приведенные на рис. \ref{subsystems} требуют пояснения:
 \begin{itemize}[label={}]
   \item a --- информация, предоставляемая пользователем, передается на сервер;
   \item b --- выходная информация (результат выполнения);
@@ -69,17 +69,17 @@
 Если некоторая подсистема имеет связи только с внешней средой, то есть смысл реализовать ее в виде отдельной системы.
 Подсистема, не связанная ни с внешней средой, ни с другой подсистемой, является избыточной и должна быть удалена из системы.
 
-Подсистема взаимодействия с пользователем представлена на рисунке \ref{user-subsys}.
-\addimghere{user-subsys}{1}{Внутренние и внешние связи подсистемы взаимодействия с пользователем}{user-subsys}
+Подсистема взаимодействия с пользователем представлена на рис. \ref{user-subsys}.
+\addimg{user-subsys}{1}{Внутренние и внешние связи подсистемы взаимодействия с пользователем}{user-subsys}
 
-Подсистема управления услугами представлена на рисунке \ref{service-subsys}.
-\addimghere{service-subsys}{1}{Внутренние и внешние связи подсистемы управления услугами}{service-subsys}
+Подсистема управления услугами представлена на рис. \ref{service-subsys}.
+\addimg{service-subsys}{1}{Внутренние и внешние связи подсистемы управления услугами}{service-subsys}
 
-Подсистема управления инфраструктурой представлена на рисунке \ref{infrast-subsys}.
-\addimghere{infrast-subsys}{1}{Внутренние и внешние связи подсистемы управления инфраструктурой}{infrast-subsys}
+Подсистема управления инфраструктурой представлена на рис. \ref{infrast-subsys}.
+\addimg{infrast-subsys}{1}{Внутренние и внешние связи подсистемы управления инфраструктурой}{infrast-subsys}
 
-Подсистема защиты и обеспечения целостности данных представлена на рисунке \ref{security-subsys}.
-\addimghere{security-subsys}{1}{Внутренние и внешние связи подсистемы защиты и обеспечения целостности данных}{security-subsys}
+Подсистема защиты и обеспечения целостности данных представлена на рис. \ref{security-subsys}.
+\addimg{security-subsys}{1}{Внутренние и внешние связи подсистемы защиты и обеспечения целостности данных}{security-subsys}
 
 \subsection{Принцип модульности}
 
@@ -89,7 +89,7 @@
 Принцип указывает на возможность вместо части системы исследовать совокупность ее входных и выходных воздействий.
 Выделению модулей соответствует декопмозиция сложной задачи на множество более простых подзадач.
 
-Принцип модульности для разрабатываемой системы поясняется с помощью рисунка \ref{modules}, описывающего разбиение на модули системы взаимодействия с пользователем.
+Принцип модульности для разрабатываемой системы поясняется с помощью рис. \ref{modules}, описывающего разбиение на модули системы взаимодействия с пользователем.
 \addimghere{modules}{0.75}{Принцип модульности на примере подсистемы взаимодействия с пользователем}{modules}
 
 Излишняя детализация не требуется, поэтому остальные системы на модули принято решение не разбивать.
@@ -137,7 +137,7 @@
 Разработка иерархий классов является нетривиальной задачей.
 Грамотно спроектированные иерархии классов позволяют создавать высокоэффективные системы, плохо спроектированная иерархия приводит к созданию сложных и запутанных систем.
 
-Выполнение принципа иерархичности для разрабатываемой системы на примере подсистемы защиты и обеспечения целостности данных проиллюстрировано на рисунке \ref{hierarchy-princ}.
+Выполнение принципа иерархичности для разрабатываемой системы на примере подсистемы защиты и обеспечения целостности данных проиллюстрировано на рис. \ref{hierarchy-princ}.
 \addimghere{hierarchy-princ}{1}{Принцип иерархии на примере подсистемы защиты и обеспечения целостности данных}{hierarchy-princ}
 
 \subsection{Принцип сочетания централизации и децентрализации}
