--- a/inc/5-adminguide.tex
+++ b/inc/5-adminguide.tex
@@ -1,5 +1,7 @@
 \section{Руководство администратора}
 
+Руководство администратора содержит инфорамацию о сетевой инфраструктуре, об используемых технологиях виртуализации и программном обеспечении.
+
 \subsection{Расположение серверов в сетевой инфраструктуре}
 Во всей инфраструктуре на физических серверах первого дата-центра располагаются:
 \begin{itemize}
