--- a/inc/a-app.tex
+++ b/inc/a-app.tex
@@ -1,4 +1,11 @@
-\anonsection{Приложение А --- Исходный код скрипта DDoS Deflate}
+\vspace*{\fill}
+\anonsection{Приложение А}
+\vspace*{\fill}
+
+\clearpage
+\begin{center}
+\uppercase{Исходный код скрипта DDoS Deflate}
+\end{center}
 
 \lstinputlisting[numbers=left]{inc/ddos-deflate/README.md}
 
