--- a/inc/b-app.tex
+++ b/inc/b-app.tex
@@ -1,49 +1,56 @@
-\anonsection{Приложение Б --- Руководство пользователя}
+\vspace*{\fill}
+\anonsection{Приложение Б}
+\vspace*{\fill}
 
-\addimgapp{1-welcome}{Рисунок Б.1 --- Список тарифов на сайте}
+\clearpage
+\begin{center}
+\uppercase{Руководство пользователя}
+\end{center}
 
-\addimgapp{2-order}{Рисунок Б.2 --- Для выбора нужного тарифа необходимо нажать кнопку <<ЗАБРАТЬ>> под ним}
+\addimgapp{1-welcome}{Рис. Б.1 --- Список тарифов на сайте}
 
-\addimgapp{3-registration}{Рисунок Б.3 --- Регистрация в биллинге для возможности заказа услуги}
+\addimgapp{2-order}{Рис. Б.2 --- Для выбора нужного тарифа необходимо нажать кнопку <<ЗАБРАТЬ>> под ним}
 
-\addimgapp{4-order-service}{Рисунок Б.4 --- Пример заказа услуги в биллинге}
+\addimgapp{3-registration}{Рис. Б.3 --- Регистрация в биллинге для возможности заказа услуги}
 
-\addimgapp{5-bill-services}{Рисунок Б.5 --- Выбор типа услуги}
+\addimgapp{4-order-service}{Рис. Б.4 --- Пример заказа услуги в биллинге}
 
-\addimgapp{6-basket}{Рисунок Б.6 --- Список услуг в корзине}
+\addimgapp{5-bill-services}{Рис. Б.5 --- Выбор типа услуги}
 
-\addimgapp{7-orderlist}{Рисунок Б.7 --- Список заказанных услуг в разделе хостинга}
+\addimgapp{6-basket}{Рис. Б.6 --- Список услуг в корзине}
 
-\addimgapp{8-costs}{Рисунок Б.8 --- Список расходов на услуги}
+\addimgapp{7-orderlist}{Рис. Б.7 --- Список заказанных услуг в разделе хостинга}
 
-\addimgapp{9-hosting-user}{Рисунок Б.9 --- Настройки пользователя хостинга}
+\addimgapp{8-costs}{Рис. Б.8 --- Список расходов на услуги}
 
-\addimgapp{10-hosting-filemgr}{Рисунок Б.10 --- Файловый менеджер в панели управления хостингом}
+\addimgapp{9-hosting-user}{Рис. Б.9 --- Настройки пользователя хостинга}
 
-\addimgapp{11-hosting-ftp}{Рисунок Б.11 --- Список FTP-пользователей}
+\addimgapp{10-hosting-filemgr}{Рис. Б.10 --- Файловый менеджер в панели управления хостингом}
 
-\addimgapp{12-hosting-webscripts}{Рисунок Б.12 --- Возможность установки популярных CMS из каталоге Web-скриптов}
+\addimgapp{11-hosting-ftp}{Рис. Б.11 --- Список FTP-пользователей}
 
-\addimgapp{13-hosting-www}{Рисунок Б.13 --- Управление www-доменами}
+\addimgapp{12-hosting-webscripts}{Рис. Б.12 --- Возможность установки популярных CMS из каталоге Web-скриптов}
 
-\addimgapp{14-hosting-backup}{Рисунок Б.14 --- Управление резервными копиями}
+\addimgapp{13-hosting-www}{Рис. Б.13 --- Управление www-доменами}
 
-\addimgapp{15-hosting-mail}{Рисунок Б.15 --- Управление почтовыми ящиками}
+\addimgapp{14-hosting-backup}{Рис. Б.14 --- Управление резервными копиями}
 
-\addimgapp{16-ovz-containers}{Рисунок Б.16 --- Список контейнеров в панели управления OpenVZ}
+\addimgapp{15-hosting-mail}{Рис. Б.15 --- Управление почтовыми ящиками}
 
-\addimgapp{17-ovz-plots}{Рисунок Б.17 --- Отчет о нагрузке контейнера}
+\addimgapp{16-ovz-containers}{Рис. Б.16 --- Список контейнеров в панели управления OpenVZ}
 
-\addimgapp{18-ovz-journal}{Рисунок Б.18 --- Журнал посещений панели OpenVZ}
+\addimgapp{17-ovz-plots}{Рис. Б.17 --- Отчет о нагрузке контейнера}
 
-\addimgapp{19-kvm-vm}{Рисунок Б.19 --- Список виртуальных машин в панели управления KVM}
+\addimgapp{18-ovz-journal}{Рис. Б.18 --- Журнал посещений панели OpenVZ}
 
-\addimgapp{20-kvm-isos}{Рисунок Б.20 --- Список ISO-образов}
+\addimgapp{19-kvm-vm}{Рис. Б.19 --- Список виртуальных машин в панели управления KVM}
 
-\addimgapp{21-bill-request}{Рисунок Б.21 --- Запрос к технической поддержке}
+\addimgapp{20-kvm-isos}{Рис. Б.20 --- Список ISO-образов}
 
-\addimgapp{22-wiki}{Рисунок Б.22 --- Регистрация в wiki}
+\addimgapp{21-bill-request}{Рис. Б.21 --- Запрос к технической поддержке}
 
-\addimgapp{23-wiki-question}{Рисунок Б.23 --- Пример вопроса в wiki}
+\addimgapp{22-wiki}{Рис. Б.22 --- Регистрация в wiki}
+
+\addimgapp{23-wiki-question}{Рис. Б.23 --- Пример вопроса в wiki}
 
 \clearpage
