--- a/inc/4-description.tex
+++ b/inc/4-description.tex
@@ -1,8 +1,10 @@
 \section{Описание виртуальной инфраструктуры}
 
+В разделе описания инфраструктуры представлены схемы и алгоритмы взаимодействия компонентов инфраструктуры, схема взаимодействия с пользователем, схемы репликации и балансировки DNS.
+
 \subsection{Общая схема инфраструктуры}
 
-Общая схема инфраструктуры представлена на рисунке \ref{infrast-scheme} и чертеже \href{extra/drafts/SevGU_09.03.01.15.A1.pdf}{СевГУ 09.03.01.15.А1}.
+Общая схема инфраструктуры представлена на рис. \ref{infrast-scheme} и чертеже \href{extra/drafts/SevGU_09.03.01.15.A1.pdf}{СевГУ 09.03.01.15.А1}.
 \addimghere{infrast-scheme}{1}{Общая схема инфраструктуры}{infrast-scheme}
 
 В дата-центре 1 располагается основная часть инфраструктуры: сервера shared-хостинга, виртуализации OpenVZ и KVM, сервер резервного копирования и выделенные сервера клиентов.
@@ -13,7 +15,7 @@
 
 \subsection{Схема мониторинга}
 
-Схема мониторинга инфраструктуры представлена на рисунке \ref{nagios-munin-scheme}.
+Схема мониторинга инфраструктуры представлена на рис. \ref{nagios-munin-scheme}.
 \addimghere{nagios-munin-scheme}{1}{Схема мониторинга инфраструктуры}{nagios-munin-scheme}
 
 В случае возникновения проблемы на одном из серверов, Nagios фиксирует изменения и отправляет текстовые уведомления по SMS и электронной почте дежурному администратору, который следит за системой мониторинга.
@@ -27,7 +29,7 @@ Munin работает по протоколу MGF (Munin Graphing Framework) н
 \subsection{Схема репликации и балансировки нагрузки DNS-серверов}
 
 С целью обеспечения отказоустойчивости системы была разработана следующая схема репликации и балансировки нагрузки DNS-серверов.
-Схема представлена на рисунке \ref{dns-scheme}.
+Схема представлена на рис. \ref{dns-scheme}.
 \addimghere{dns-scheme}{1}{Схема репликации и балансировки нагрузки DNS-серверов}{dns-scheme}
 
 В каждой зоне есть один главный сервер имен на котором хранится официальная копия данных зоны.
