--- a/inc/7-testing.tex
+++ b/inc/7-testing.tex
@@ -1,25 +1,25 @@
 \section{Результаты тестирования}
 
-В режиме нормального функционирования мониторинг показывает полную работоспособность всех сервисов системы (рисунок \ref{nagios-ok}).
+В режиме нормального функционирования мониторинг показывает полную работоспособность всех сервисов системы (рис. \ref{nagios-ok}).
 \addimghere{nagios-ok}{1}{Работоспособность сервисов в штатном режиме}{nagios-ok}
 
 В случае появления внештатных ситуаций, система мониторинга фиксирует аномальные явления, такие как недоступность хостов или отдельных сервисов.
 Мониторинг способен запоминать код ошибки, поэтому диагностика неисправностей является несложной задачей.
-Пример реакции системного мониторинга на недоступность сервера представлен на рисунке \ref{nagios-nok}.
+Пример реакции системного мониторинга на недоступность сервера представлен на рис. \ref{nagios-nok}.
 \addimghere{nagios-nok}{1}{Недоступность некоторых серверов инфраструктуры}{nagios-nok}
 
-Пример реакции системы мониторинга Nagios на неисправность одного из дисков в RAID-массиве представлен на рисунке \ref{nagios-raid-error}.
+Пример реакции системы мониторинга Nagios на неисправность одного из дисков в RAID-массиве представлен на рис. \ref{nagios-raid-error}.
 \addimghere{nagios-raid-error}{1}{Сбой работы диска в RAID-массиве}{nagios-raid-error}
 
 \subsection{Нагрузка сети во время резервного копирования}
 
 Каждую ночь на серверах запускается задача резервного копирования, в это время наблюдается повышенная нагрузка на сервере, связанная со снятием дампов баз данных, архивацией и сжатием архивов для передачи по сети на сервер резервного копирования.
 
-Как правило повышение нагрузки незначительное, что можно наблюдать на рисунке \ref{top-ok}.
+Как правило повышение нагрузки незначительное, что можно наблюдать на рис. \ref{top-ok}.
 \addimghere{top-ok}{1}{Состояние системы во время процесса резервного копирования}{top-ok}
 
 На графике Munin можно наблюдать значительное повышение утилизации сетевого канала во время резервного копирования.
-График представлен на рисунке \ref{munin-backup}.
+График представлен на рис. \ref{munin-backup}.
 Значения представленные на графике являются условными, сетевого канала в 10 Мб/с явно недостаточно для такой инфраструктуры.
 На деле используется сеть с пропускной способностью 100 Мб/с.
 \addimghere{munin-backup}{1}{Состояние системы во время процесса резервного копирования}{munin-backup}
@@ -38,14 +38,14 @@
 От последних двух типов атак можно защищаться средствами операционной системы.
 В случае переполнения сетевого канала, решением проблемы является расширение сетевого канала.
 
-Состояние нагрузки системы во время DDoS-атаки можно пронаблюдать на рисунке \ref{munin-la}.
+Состояние нагрузки системы во время DDoS-атаки можно пронаблюдать на рис. \ref{munin-la}.
 \addimghere{munin-la}{1}{Значительное повышение нагрузки в период 0:00}{munin-la}
 
 В данный промежуток времени нагрузка составила 40 LA, что превышает среднюю нагрузку на используемом сервере в 20 раз.
-При этом, в процессах системы наблюдается явная нагрузка на сервер баз данных (рисунок \ref{htop-ddos}).
+При этом, в процессах системы наблюдается явная нагрузка на сервер баз данных (рис. \ref{htop-ddos}).
 \addimghere{htop-ddos}{1}{Все процессорные ядра заняты обработкой запросов}{htop-ddos}
 
-На графиках соединений с брандмауэром также наблюдается аномальное явление (рисунок \ref{munin-ddos}).
+На графиках соединений с брандмауэром также наблюдается аномальное явление (рис. \ref{munin-ddos}).
 \addimghere{munin-ddos}{1}{Превышено число соединений к брандмауэру в 40 раз}{munin-ddos}
 
 Если взглянуть на вывод команды netstat, то можно заметить наиболее активные адреса:
@@ -66,7 +66,7 @@ uniq -c | sort -rn | grep -v 127.0.0.1 | head
 
 \subsection{Отказ одного из DNS-серверов}
 
-Nagios зафиксировал недоступность одного из DNS-серверов, неспособного осуществлять обработку запросов (рисунок \ref{dns-nok}).
+Nagios зафиксировал недоступность одного из DNS-серверов, неспособного осуществлять обработку запросов (рис. \ref{dns-nok}).
 \addimghere{dns-nok}{1}{Недоступность DNS-сервера}{dns-nok}
 
 При этом все сайты доступны и работают в штатном режиме, так как отсутствие одного из трех серверов не влияет на работоспособность всей инфраструктуры.
