--- a/inc/8-lifesafety.tex
+++ b/inc/8-lifesafety.tex
@@ -1,11 +1,13 @@
 \section{Безопасность жизнедеятельности}
 
+В разделе выполнен анализ условий труда администратора и их требованиям освещенности, электробезопасности, микроклимата, шума, требованиям к оборудованию, к организации рабочего места пользователя ПК.
+
 \subsection{Краткая характеристика помещения}
 
 Согласно санитарным нормам, ширина стола должна быть не менее 0.6~м, глубина не менее 0.8~м, также необходимо обеспечить расстояние между боковыми поверхностями мониторов не менее 1.2~м.
 
-На рисунке \ref{roomplan} изображена планировка и размещение оборудования на рабочем месте.
-\addimghere{roomplan}{1}{Планировка и размещение оборудования на рабочем месте \\
+На рис. \ref{roomplan} изображена планировка и размещение оборудования на рабочем месте.
+\addimghere{roomplan}{0.85}{Планировка и размещение оборудования на рабочем месте \\
 1 --- дверь; 2 --- тумбочка; 3 --- холодильник; 4 --- стол; 5 --- кресло; 6 --- ноутбук; 7 --- монитор; 8 --- планшет; 9 --- кровать; 10 --- окно; 11 --- шкаф; 12 --- обеденный стол}{roomplan}
 
 \subsection{Микроклимат}
