Отступы поправил от заголовков

--- a/inc/4-description.tex
+++ b/inc/4-description.tex
@@ -47,7 +47,9 @@ Munin работает по протоколу MGF (Munin Graphing Framework) н
 
 На основе обзора литературы, проведенного в пункте \ref{literature}, выбраны и внедрены технологии виртуализации OpenVZ и KVM.
 
-\subsection{Алгоритмы функционирования инфраструктуры}
+\subsection{Алгоритмы функционирования инфраструктуры} \label{algo}
+
+В подразделе \ref{algo} представлены алгоритмы инфраструктуры.
 
 \subsubsection{Схема взаимодействия пользователя с инфраструктурой}
 
@@ -113,7 +115,7 @@ Munin работает по протоколу MGF (Munin Graphing Framework) н
 
 Сценарий 1. Мониторинг:
 \begin{enumerate}
-  \item Nagios мониторит состояние сервисов физических серверов, контейнеров и виртуальных машин;
+  \item Nagios мониторит состояние сервисов;
   \item Nagios обнаружил недоступность или сбой сервиса;
   \item отправка электронного и SMS-сообщения дежурному администратору;
   \item дежурный администратор исправляет проблему;
