Очередные правки для нормоконтроллера

--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -247,14 +247,14 @@ LXC основана на технологии cgroups, входящей в яд
 Ее нельзя рассматривать как законченный продукт, фактически это набор из нескольких совершенно самостоятельных функций ядра Linux и пользовательских утилит, которые позволяют удобно создавать и управлять изолированными контейнерами \cite{lxc}.
 Практически вся функциональность LXC представлена известными механизмами ядра cgroups и namespaces.
 
-cgroups (Control Groups) --- позволяет ограничить аппаратные ресурсы некоторого набора процессов.
+CGroups (Control Groups) --- позволяет ограничить аппаратные ресурсы некоторого набора процессов.
 Под аппаратными ресурсами подразумеваются: процессорное время, память, дисковая и сетевая подсистемы.
 Набор или группа процессов могут быть определены различными критериями.
 Например, это может быть целая иерархия процессов, получающая все лимиты родительского процесса.
 Кроме этого возможен подсчет расходуемых группой ресурсов, заморозка (freezing) групп, создание контрольных точек (checkpointing) и их перезагрузка.
 Для управления этим полезным механизмом существует специальная библиотека libcgroups, в состав которой входят такие утилиты, как cgcreate, cgexec и некоторые другие.
 
-namespaces --- пространства имен.
+Namespaces --- пространства имен.
 Это механизм ядра, который позволяет изолировать процессы друг от друга.
 Изоляция может быть выполнена в шести контекстах (пространствах имен):
 \begin{itemize}
