--- a/inc/4-description.tex
+++ b/inc/4-description.tex
@@ -1,6 +1,6 @@
 \section{Описание виртуальной инфраструктуры}
 
-В разделе описания инфраструктуры представлены схемы и алгоритмы взаимодействия компонентов инфраструктуры, схема взаимодействия с пользователем, схемы репликации и балансировки DNS.
+В разделе описания виртуальной инфраструктуры представлена общая схема инфраструктуры, схемы мониторинга, репликации и балансировки DNS, используемые технологии виртуализации, алгоритмы взаимодействия пользователя и компонентов инфраструктуры.
 
 \subsection{Общая схема инфраструктуры}
 
@@ -45,15 +45,15 @@ Munin работает по протоколу MGF (Munin Graphing Framework) н
 
 \subsection{Используемые технологии виртуализации}
 
-На основе обзора литературы, проведенного в пункте \ref{literature}, выбраны и внедрены технологии виртуализации OpenVZ и KVM.
+На основе обзора литературы, проведенного в пункте \ref{literature}, выбраны и внедрены технологии виртуализации OpenVZ (для организации контейнеров) и KVM (для организации виртуальных машин).
 
 \subsection{Алгоритмы функционирования инфраструктуры} \label{algo}
 
-В подразделе \ref{algo} представлены алгоритмы инфраструктуры.
+Взаимодействие пользователя с инфраструктурой происходит по сценариям, представленным в пункте \ref{user-infr}.
 
-\subsubsection{Схема взаимодействия пользователя с инфраструктурой}
+В пункте \ref{infr-comp} представлены сценарии взаимодействия компонентов инфраструктуры.
 
-Взаимодействие пользователя с инфраструктурой происходит по следующим сценариям.
+\subsubsection{Схема взаимодействия пользователя с инфраструктурой} \label{user-infr}
 
 Сценарий 1. Заказ облачного сервиса:
 \begin{enumerate}
@@ -111,7 +111,7 @@ Munin работает по протоколу MGF (Munin Graphing Framework) н
 
 Алгоритмы взаимодействия пользователем с инфраструктурой представлены на чертеже \href{extra/drafts/SevGU_09.03.01.15.A2.pdf}{СевГУ 09.03.01.15.А2}.
 
-\subsubsection{Алгоритм взаимодействия компонентов инфраструктуры}
+\subsubsection{Алгоритм взаимодействия компонентов инфраструктуры} \label{infr-comp}
 
 Сценарий 1. Мониторинг:
 \begin{enumerate}
@@ -124,7 +124,7 @@ Munin работает по протоколу MGF (Munin Graphing Framework) н
 
 Сценарий 2. Резервное копирование:
 \begin{enumerate}
-  \item запуск задания инкрементального резервного копирования, согласно расписанию;
+  \item запуск задания инкрементального резервного копирования;
   \item расчет свободного дискового пространства на удаленном хранилище для инкрементальной или полной копии;
   \item в случае нехватки дискового пространства на удаленном хранилище --- отправка электронного сообщения системному администратору, переход к пункту е;
   \item архивация и сжатие данных;
@@ -137,12 +137,12 @@ Munin работает по протоколу MGF (Munin Graphing Framework) н
   \item добавлен новый физический сервер, контейнер, виртуальная машина или клиент хостинга заказал дополнительный адрес;
   \item проверка свободного IP-адреса;
   \item если свободного адреса нет, то уведомление о необходимости заказа новой подсети IP-адресов у провайдера, переход к пункту е;
-  \item привязка нового IP-адреса к физическому серверу, контейнеру, виртуальной машине или пользователю хостинга;
+  \item привязка нового IP-адреса к серверу;
   \item удаление привязанного адреса из списка свободных;
   \item конец.
 \end{enumerate}
 
-Сценарий 4. Добавление нового физического сервера, контейнера или виртуальной машины:
+Сценарий 4. Добавление нового сервера:
 \begin{enumerate}
   \item заказ услуги физического сервера, контейнера или виртуальной машины;
   \item выделение IP-адресов;
