--- a/inc/5-adminguide.tex
+++ b/inc/5-adminguide.tex
@@ -39,7 +39,7 @@
 nginx принимает запросы к серверу с порта 80 и решает каким образом обрабатывать запрос.
 Если это запрос на получение статического файла (изображение, js-код, CSS, видео, аудио, архивы), то nginx сам его обрабатывает и в случае необходимости кэширует.
 Если же запрашивается динамическое содержимое, то nginx передает запрос на бэкенд, где его, в зависимости от настройки виртуального хоста сайта, обрабатывает либо php-fpm, либо встроенный в Apache модуль mod\_php.
-nginx не может кэшировать динамические запросы, поэтому для этого используется memcached, который работает в связке с Apache HTTP Server и позволяет кэшировать динамические запросы.
+nginx не может кэшировать динамические запросы, поэтому для этого используется memcached, который работает в связке с Apache и позволяет кэшировать динамические запросы.
 Для работы Apache с memcached необходима установка модуля PHP php5-memcached:
 \begin{lstlisting}
 # apt-get install php5-memcached
@@ -102,7 +102,7 @@ user@10.0.0.111~$ ssh -p 222 root@10.0.0.100
 Для восстановления необходимо несколько копий --- полная и все инкрементальные, сохраненные до выбранной точки восстановления.
 Раз в неделю (в воскресенье) запускается очередная полная резервная копия данных.
 
-На сервере функционирует скрипт блокировки адресов, которые слишком часто подбирают пароли доступа к панели администратора наиболее популярных CMS, таких как WordPress и Joomla.
+На сервере функционирует скрипт блокировки адресов, которые слишком часто подбирают пароли доступа к панели администратора наиболее популярных CMS (система управления содержимым), таких как WordPress и Joomla.
 Скрипт написан на языке Shell, находится в открытом доступе и имеет простое использование:
 \begin{lstlisting}
 #!/bin/bash
@@ -197,12 +197,6 @@ awk '{print $1}' | xargs exim -Mrm
 7129 core
 21194 core
 # killall core
-\end{lstlisting}
-
-Обновление компонентов системы дистрибутива Debian 7:
-\begin{lstlisting}
-# apt-get update
-# apt-get upgrade
 \end{lstlisting}
 
 \subsection{Сервер виртуализации OpenVZ}
@@ -602,12 +596,6 @@ Enter password: NEW-PASS
 Для блокировки намеренных атак требуется аппаратная защита на уровне сетевого оборудования.
 Защита от распределенных DDoS-атак основывается на мно­го­фак­тор­ном анализе трафика, который поступает на каждый защищаемый сервер.
 Во время нормальной работы система защиты может самообучаться или настраиваться, а после обнаружения атаки либо автоматически, либо по требованию, активно про­тиво­дей­ству­ет нелегитимному трафику.
-Эффективность защиты от DDoS-атак обычно описывается тремя основными параметрами:
-\begin{itemize}
-  \item мощность атаки (Мбит/с), которую способна выдержать система;
-  \item точность действий системы при обнаружении и отражении атаки;
-  \item вероятность и количество ложных срабатываний (False Positive).
-\end{itemize}
 
 В данном случае защитником выступает дата-центр, который имеет в распоряжении оборудование, способное осуществлять фильтрацию трафика и предотвращение атак на отказ.
 
