--- a/inc/a-app.tex
+++ b/inc/a-app.tex
@@ -1,13 +1,11 @@
-\vspace*{\fill}
 \anonsection{Приложение А}
+\vspace*{\fill}
+\centering{\uppercase{Исходный код скрипта DDoS Deflate}}
 \vspace*{\fill}
 
 \clearpage
-\begin{center}
-\uppercase{Исходный код скрипта DDoS Deflate}
-\end{center}
 
-\lstinputlisting[numbers=left]{inc/ddos-deflate/README.md}
+% \lstinputlisting[numbers=left]{inc/ddos-deflate/README.md} % Не вижу смысла включать README.md сюда
 
 \lstinputlisting[numbers=left]{inc/ddos-deflate/ddos.conf}
 
