--- a/inc/preamble.tex
+++ b/inc/preamble.tex
@@ -110,7 +110,7 @@
 
 % Формат подрисуночных надписей
 \RequirePackage{caption}
-\DeclareCaptionLabelSeparator{defffis}{ -- } % Разделитель
+\DeclareCaptionLabelSeparator{defffis}{ } % Разделитель
 \captionsetup[figure]{justification=centering, labelsep=defffis, format=plain} % Подпись рисунка по центру
 \captionsetup[table]{justification=raggedright, labelsep=defffis, format=plain, singlelinecheck=false} % Подпись таблицы слева
 \addto\captionsrussian{\renewcommand{\figurename}{Рис.}} % Имя фигуры
