--- a/inc/b-app.tex
+++ b/inc/b-app.tex
@@ -1,11 +1,9 @@
-\vspace*{\fill}
 \anonsection{Приложение Б}
+\vspace*{\fill}
+\centering{\uppercase{Руководство пользователя}}
 \vspace*{\fill}
 
 \clearpage
-\begin{center}
-\uppercase{Руководство пользователя}
-\end{center}
 
 \addimgapp{1-welcome}{Рис. Б.1 --- Список тарифов на сайте}
 
