--- a/inc/a-app.tex
+++ b/inc/a-app.tex
@@ -1,11 +1,12 @@
-\anonsection{Приложение А}
 \vspace*{\fill}
-\centering{\uppercase{Исходный код скрипта DDoS Deflate}}
+\centering{\uppercase{Приложение}}
 \vspace*{\fill}
 
 \clearpage
 
-% \lstinputlisting[numbers=left]{inc/ddos-deflate/README.md} % Не вижу смысла включать README.md сюда
+\appsection{Приложение А}
+\centering{\uppercase{Исходный код скрипта DDoS Deflate}}
+\vspace{\baselineskip}
 
 \lstinputlisting[numbers=left]{inc/ddos-deflate/ddos.conf}
 
@@ -16,5 +17,7 @@
 \lstinputlisting[numbers=left]{inc/ddos-deflate/install.sh}
 
 \lstinputlisting[numbers=left]{inc/ddos-deflate/uninstall.sh}
+
+\lstinputlisting[numbers=left]{inc/ddos-deflate/README.md}
 
 \clearpage
