--- a/inc/b-app.tex
+++ b/inc/b-app.tex
@@ -1,9 +1,6 @@
-\anonsection{Приложение Б}
-\vspace*{\fill}
-\centering{\uppercase{Руководство пользователя}}
-\vspace*{\fill}
-
-\clearpage
+\appsection{Приложение Б}
+\centering{\uppercase{Руководство пользователя}} \\
+\vspace{\baselineskip}
 
 \addimgapp{1-welcome}{Рис. Б.1 --- Список тарифов на сайте}
 
