--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
 \input{inc/1-pz} % Постановка задачи
 \input{inc/2-literature} % Обзор современных методов и технологий серверной виртуализации
 \input{inc/3-analyze} % Системный анализ виртуальной инфраструктуры
-\input{inc/4-description} % Описание виртуальной инфраструктуры !!! СТОИТ ДОРАБОТКИ
+\input{inc/4-description} % Описание виртуальной инфраструктуры
 \input{inc/5-adminguide} % Руководство администратора
 \input{inc/6-userguide} % Руководство пользователя
 \input{inc/7-testing} % Результаты тестирования
